tile background to fix weird shift

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -3,8 +3,7 @@
 }
 
 body {
-	background: url(image_path('corkboard.jpg')) no-repeat center center fixed;
-	background-size: cover
+	background: url(image_path('corkboard.jpg'));
 }
 
 .devise-wrapper {
